# PyJudge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.md  docker-compose.yml  log.md  plan.md  pyproject.toml
alembic/: env.py
alembic/versions/: 35927253f62b_create_assignments_and_test_cases_tables.py  bd9dd891f7f1_add_generation_requests_and_artifacts.py
src/greader/: __init__.py  config.py  database.py  db_models.py  main.py
src/greader/assignments/: __init__.py  mappers.py  models.py  repository.py  routes.py  seed.py  sql_repository.py
src/greader/assistant/: __init__.py  demo.py  errors.py  gemini.py  interface.py  models.py  providers.py  repository.py  schemas.py  service.py
src/greader/scripts/: __init__.py  gemini_smoke_test.py  seed_demo.py
src/greader/static/css/: app.css  input.css
src/greader/templates/: base.html  dashboard.html
src/greader/templates/assignments/: editor.html  index.html  not_found.html
src/greader/templates/partials/: sidebar.html
tests/: conftest.py  test_app.py  test_assignments.py  test_config.py  test_repository_contract.py
tests/integration/: test_generation_persistence.py
tests/unit/: test_assignment_generation.py
